user management loading on amin side, the html template is bad, moving css out

--- a/admin/templates/base_admin.html
+++ b/admin/templates/base_admin.html
@@ -36,6 +36,7 @@
     <link href="{{ url_for('static', filename='css/admin.css') }}" rel="stylesheet" nonce="{{ g.csp_nonce }}">
     <link href="{{ url_for('admin.static', filename='css/admin-extracted.css') }}" rel="stylesheet" nonce="{{ g.csp_nonce }}">
     <link href="{{ url_for('admin.static', filename='css/admin_dashboard.css') }}" rel="stylesheet" nonce="{{ g.csp_nonce }}">
+    <link href="{{ url_for('admin.static', filename='css/user_management.css') }}" rel="stylesheet" nonce="{{ g.csp_nonce }}">
 
     <!-- Unified Notification System Styles -->
     <link href="{{ url_for('static', filename='css/unified-notifications.css') }}" rel="stylesheet" nonce="{{ g.csp_nonce }}">
